--- a/index.html.haml
+++ b/index.html.haml
@@ -24,25 +24,39 @@
       #news
         #sidebar
           // fb iframe
-          <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoolingtowersmusic&amp;send=false&amp;layout=standard&amp;width=320&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:320px; height:80px;" allowTransparency="true"></iframe>
+          %p
+            <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoolingtowersmusic&amp;send=false&amp;layout=standard&amp;width=320&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:320px; height:80px;" allowTransparency="true"></iframe>
 
-          // twitter widget
+          %p
+            "Candy Beach" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
 
-          // candy beach
-          <iframe width="320" height="180" src="http://www.youtube.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Hard Headed Woman" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/btw4D45mDqc" frameborder="0" allowfullscreen></iframe>
 
-          %p fag
-          <iframe width="100%" height="110" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F22943087&show_artwork=true"></iframe>
+          %p
+            "Kevlar Vest" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/DJmwpTpfugw" frameborder="0" allowfullscreen></iframe>
 
-          %p fag
-          <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/btw4D45mDqc" frameborder="0" allowfullscreen></iframe>
-          %p fag
-          %p fag
-          %p eat my fucking diarrhea
-          %p eat my fucking diarrhea
-          %p eat my fucking diarrhea
-          %p eat my fucking diarrhea
-          %p eat my fucking diarrhea
+          %p
+            "Charlotte" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/uER7Lf2nXjU" frameborder="0" allowfullscreen></iframe>
+
+          %p
+            "Apple Martin" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/HrrpDXRoKBo" frameborder="0" allowfullscreen></iframe>
+
+          %p
+            "Charlotte" and "Lead Suitcase"
+            %br
+            at Great Scott, 26 Jan 2011
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/LRkIZlWbyQw" frameborder="0" allowfullscreen></iframe>
+
+          %p
+            "Chelsea Girls" at TT's, 19 Jan 2011
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/Stq_W-RCUrw" frameborder="0" allowfullscreen></iframe>
+
 
         #content
           .item
@@ -113,6 +127,9 @@
             %p
               Cooling Towers is hitting Brooklyn twice this month! 2/4 at The Gutter
               with Lord Classic, and 2/17 at Spike Hill with Missing Ships.
+
+        .clear
+
 
       #bio
         %a(href='images/press/201202-coolingtowers-2400x1350.jpg' target='_blank')
