--- a/main.css
+++ b/main.css
@@ -1,11 +1,18 @@
 html {
   background-color: black;
-  color: black; }
+  color: black;
+  margin: 0;
+  padding: 0; }
 
 body {
+  border: 1px solid #f8f8f8;
+  border-left: 0;
+  border-right: 0;
   width: 960px;
+  background-color: #f8f8f8;
   min-height: 100%;
-  margin: 10px auto 10px auto;
+  margin: 0 auto;
+  padding: 0;
   font-family: 'Allerta', 'Geneva', 'Tahoma', sans-serif;
   font-size: 16px; }
 
@@ -77,7 +84,6 @@ nav {
 
 #main {
   position: relative;
-  background-color: #f8f8f8;
   padding: 10px;
   padding-bottom: 20px; }
   #main p {
