--- a/main.css.scss
+++ b/main.css.scss
@@ -25,12 +25,22 @@ $logo_color: #fff;
 html {
   background-color: $html_bgcolor;
   color: $fgcolor;
+  margin: 0;
+  padding: 0;
 }
 
 body {
+  // next three lines are necessary to keep the top and bottom of body
+  // from collapsing into $html_bgcolor
+  border: 1px solid $body_bgcolor;
+  border-left: 0;
+  border-right: 0;
+
   width: $width;
+  background-color: $body_bgcolor;
   min-height: 100%;
-  margin: 10px auto 10px auto;
+  margin: 0 auto;
+  padding: 0;
   font-family: 'Allerta', 'Geneva', 'Tahoma', sans-serif;
   font-size: 16px;
 }
@@ -111,15 +121,12 @@ nav {
 
 #main {
   position: relative;
-  background-color: $body_bgcolor;
   padding: 10px;
   padding-bottom: 20px;
   p { margin: 5px 0px; line-height: 1.4; }
   img[align=left]  { margin: 10px 10px 10px 0px; }
   img[align=right] { margin: 10px 0px 10px 10px; }
   a { color: $fgcolor; }
-  //a,a:active,a:visited { text-decoration: none; }
-
 }
 
 #bio {
@@ -130,7 +137,6 @@ nav {
   .item {
     margin-bottom: 30px;
   }
-  //* { border: 1px solid red;}
 
   .clear {
     width: 100%;
