--- a/main.css
+++ b/main.css
@@ -5,9 +5,6 @@ html {
   padding: 0; }
 
 body {
-  border: 1px solid #f8f8f8;
-  border-left: 0;
-  border-right: 0;
   width: 960px;
   background-color: #f8f8f8;
   min-height: 100%;
@@ -52,7 +49,8 @@ header {
     font-size: 80px;
     position: relative;
     left: 10px;
-    top: 15px; }
+    top: 15px;
+    margin: 0; }
   header a, header a:active, header a:visited {
     text-decoration: none;
     color: black; }
@@ -60,7 +58,7 @@ header {
 footer {
   text-align: center;
   font-size: 12px;
-  margin: 10px 0px;
+  padding: 10px 0px;
   clear: both; }
 
 nav {
