--- a/main.css.scss
+++ b/main.css.scss
@@ -30,12 +30,6 @@ html {
 }
 
 body {
-  // next three lines are necessary to keep the top and bottom of body
-  // from collapsing into $html_bgcolor
-  border: 1px solid $body_bgcolor;
-  border-left: 0;
-  border-right: 0;
-
   width: $width;
   background-color: $body_bgcolor;
   min-height: 100%;
@@ -63,7 +57,6 @@ h3 { font-size: 145%; }
 h4 { font-size: 118%; }
 h1,h2,h3,h4 {
   display: block;
-  //font-family: 'AkiLinesRegular';
   font-family: 'Allerta', 'Geneva', 'Tahoma', sans-serif;
   font-weight: bold;
   margin: 10px 0px;
@@ -82,6 +75,7 @@ header {
     position: relative;
     left: 10px;
     top: 15px;
+    margin: 0;
   }
   a,a:active,a:visited { text-decoration: none; color: $fgcolor; }
 }
@@ -89,7 +83,7 @@ header {
 footer {
   text-align: center;
   font-size: 12px;
-  margin: 10px 0px;
+  padding: 10px 0px;
   clear: both;
 }
 
