changed logo link to #

--- a/index.html.haml
+++ b/index.html.haml
@@ -8,7 +8,7 @@
     %link(rel="stylesheet" type="text/css" href="main.css")
   %body
     %header
-      %a.logo(href="#news")
+      %a.logo(href="#")
         %h1.logo Cooling Towers
 
     %nav
