--- a/index.html.haml
+++ b/index.html.haml
@@ -26,35 +26,35 @@
           %p
             <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoolingtowersmusic&amp;send=false&amp;layout=standard&amp;width=320&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:320px; height:80px;" allowTransparency="true"></iframe>
 
-          -# %p
-          -#   "Candy Beach" at the Rumble
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Candy Beach" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/MjoXKLDH6Lk" frameborder="0" allowfullscreen></iframe>
 
-          -# %p
-          -#   "Hard Headed Woman" at the Rumble
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/btw4D45mDqc" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Hard Headed Woman" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/btw4D45mDqc" frameborder="0" allowfullscreen></iframe>
 
-          -# %p
-          -#   "Kevlar Vest" at the Rumble
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/DJmwpTpfugw" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Kevlar Vest" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/DJmwpTpfugw" frameborder="0" allowfullscreen></iframe>
 
-          -# %p
-          -#   "Charlotte" at the Rumble
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/uER7Lf2nXjU" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Charlotte" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/uER7Lf2nXjU" frameborder="0" allowfullscreen></iframe>
 
-          -# %p
-          -#   "Apple Martin" at the Rumble
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/HrrpDXRoKBo" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Apple Martin" at the Rumble
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/HrrpDXRoKBo" frameborder="0" allowfullscreen></iframe>
 
-          -# %p
-          -#   "Charlotte" and "Lead Suitcase"
-          -#   %br
-          -#   at Great Scott, 26 Jan 2011
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/LRkIZlWbyQw" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Charlotte" and "Lead Suitcase"
+            %br
+            at Great Scott, 26 Jan 2011
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/LRkIZlWbyQw" frameborder="0" allowfullscreen></iframe>
 
-          -# %p
-          -#   "Chelsea Girls" at TT's, 19 Jan 2011
-          -#   <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/Stq_W-RCUrw" frameborder="0" allowfullscreen></iframe>
+          %p
+            "Chelsea Girls" at TT's, 19 Jan 2011
+            <iframe width="320" height="180" src="http://www.youtube-nocookie.com/embed/Stq_W-RCUrw" frameborder="0" allowfullscreen></iframe>
 
 
         #content
