--- a/index.html.haml
+++ b/index.html.haml
@@ -31,7 +31,7 @@
             <div id="mc_embed_signup">
             <form action="http://coolingtowers.us5.list-manage1.com/subscribe/post?u=f122dd54a2bb389a7b9321753&amp;id=233dd1cdd3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
             <label for="mce-EMAIL">Subscribe to our mailing list!</label>
-            <input type="email" value="" placeholder="you@example.com" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+            <input id="mailchimp-email" type="email" value="" placeholder="you@example.com" name="EMAIL" class="email" required>
             <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
             </form>
             </div>
