white design, Century Schoolbook bitch what

--- a/index.html.haml
+++ b/index.html.haml
@@ -4,11 +4,11 @@
   %head
     %title Cooling Towers
     %link(rel="stylesheet" type="text/css" href="reset.css")
-    %link(href='http://fonts.googleapis.com/css?family=Allerta' rel='stylesheet' type='text/css')
+    //%link(href='http://fonts.googleapis.com/css?family=Allerta' rel='stylesheet' type='text/css')
     %link(rel="stylesheet" type="text/css" href="main.css")
   %body
     %header
-      %a.logo(href="#")
+      %a.logo(href="/")
         %h1.logo Cooling Towers
 
     %nav
