--- a/main.css.scss
+++ b/main.css.scss
@@ -1,22 +1,16 @@
-$width: 960px;
+/* css reset from http://meyerweb.com/eric/tools/css/reset/v2.0 | 20110126 License:none(publicdomain)*/
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}/*HTML5display-roleresetforolderbrowsers*/article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}body{line-height:1;}ol,ul{list-style:none;}blockquote,q{quotes:none;}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}table{border-collapse:collapse;border-spacing:0;}
 
+$width: 960px;
+$content-width: 550px;
 // white theme
 $fgcolor: #000;
-$html_bgcolor: #000;
+$html_bgcolor: #f8f8f8;
 $body_bgcolor: #f8f8f8;
-$nav_color: #ddd;
-$nav_selected_color: #fff;
-$logo_color: #fff;
-
-/*
-// black theme
-$fgcolor: #ddd;
-$html_bgcolor: #000;
-$body_bgcolor: #141414;
-$nav_color: #ddd;
-$nav_selected_color: #fff;
-$logo_color: #fff;
-*/
+$nav_color: #444;
+$nav_selected_color: #000;
+$logo_color: $fgcolor;
+$font: "Century Schoolbook", "Georgia", "Palatino", serif;
 
 
 // * { border: 1px solid red; }
@@ -36,7 +30,7 @@ body {
   min-height: 100%;
   margin: 0 auto;
   padding: 0;
-  font-family: 'Allerta', 'Geneva', 'Tahoma', sans-serif;
+  font-family: $font;
   font-size: 16px;
 }
 
@@ -58,25 +52,21 @@ h3 { font-size: 145%; }
 h4 { font-size: 118%; }
 h1,h2,h3,h4 {
   display: block;
-  font-family: 'Allerta', 'Geneva', 'Tahoma', sans-serif;
+  font-family: $font;
   font-weight: bold;
   margin: 10px 0px;
 }
 
 
 header {
-  background-image: url('images/ctbanner-960x110-notext.jpg');
-  width: 960px;
-  height: 110px;
+  width: $width;
   h1.logo {
+    display: block;
+    margin: 10px;
     color: $logo_color;
     font-family: 'AkiLinesRegular';
     font-weight: normal;
-    font-size: 80px;
-    position: relative;
-    left: 10px;
-    top: 15px;
-    margin: 0;
+    font-size: 105px;
   }
   a,a:active,a:visited { text-decoration: none; color: $fgcolor; }
 }
@@ -89,26 +79,24 @@ footer {
 }
 
 nav {
-  margin: 5px 0px;
+  margin: 5px 0px 15px 0px;
   padding: 0px;
   padding-left: 10px;
   display: block;
 
-  font-family: "AkiLinesRegular", sans-serif;
-  font-size: 40px;
-
-  background-image: url('images/ctnav-960x60.jpg');
+  font-family: $font;
+  font-size: 24px;
 
   ul {
     list-style-type: none;
     li {
-      padding: 10px;
+      padding: 5px;
       margin-right: 10px;
       display: inline-block;
       color: $nav_color;
     }
     li.selected {
-      background-color: rgba(0,0,0,0.25);
+      background-color: rgba(0,0,0,0.15);
       color: $nav_selected_color;
     }
   }
@@ -133,6 +121,10 @@ nav {
   .tumblr-post {
     margin-top: 30px;
     &:first-child { margin-top: 0px; }
+    img {
+      display: block;
+      margin: 0 auto 0 auto;
+    }
   }
 
   .clear {
@@ -141,7 +133,7 @@ nav {
   }
 
   #content {
-    width: 600px;
+    width: $content-width;
   }
 
   #sidebar {
