made a darker fiveheads and used it for the logo background -- looks weird

--- a/main.css.scss
+++ b/main.css.scss
@@ -60,6 +60,7 @@ h1,h2,h3,h4 {
 
 header {
   background-image: url('images/ctbanner-960x110-notext.jpg');
+  background-image: url('images/press/201202-fiveheads-dark-940x188.jpg');
   height: 110px;
   width: $width;
   h1.logo {
