--- a/main.css
+++ b/main.css
@@ -73,6 +73,7 @@ h1, h2, h3, h4 {
 
 header {
   background-image: url("images/ctbanner-960x110-notext.jpg");
+  background-image: url("images/press/201202-fiveheads-dark-940x188.jpg");
   height: 110px;
   width: 960px; }
   header h1.logo {
